--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -28,7 +28,7 @@
 <body>
     <!--header-->
     <header class="main-header" id="header">
-        <div class="bg-color">
+        <div class="bg-color" style="height: 610px">
             <!--nav-->
             <nav class="nav navbar-default navbar-fixed-top">
                 <div class="container">
@@ -37,14 +37,14 @@
                             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
                                 <span class="fa fa-bars"></span>
                             </button>
-                            <a href="index.html" class="navbar-brand" style="font-size: 2vw">portefeuille de christopher</a>
+                            <a href="index.html" class="navbar-brand" style="font-size: 2vw; text-shadow: 2px 2px 4px #000000;">portefeuille de christopher</a>
                         </div>
                         <div class="collapse navbar-collapse navbar-right" id="mynavbar">
                             <ul class="nav navbar-nav">
-                                <li class="active"><a href="#header">Home</a></li>
-                                <li><a href="#feature">Coding Challenges</a></li>
-                                <li><a href="#portfolio">Portfolio</a></li>
-                                <li><a href="#contact">Contact</a></li>
+                                <li class="active"><a href="#header" style="text-shadow: 2px 2px 4px #000000">Home</a></li>
+                                <li><a href="#feature" style="text-shadow: 2px 2px 4px #000000">Coding Challenges</a></li>
+                                <li><a href="#portfolio" style="text-shadow: 2px 2px 4px #000000">Portfolio</a></li>
+                                <li><a href="#contact" style="text-shadow: 2px 2px 4px #000000">Contact</a></li>
                             </ul>
                         </div>
                     </div>
@@ -53,9 +53,9 @@
             <!--/ nav-->
             <div class="container text-center">
                 <div class="wrapper wow fadeInUp delay-05s">
-                    <h2 class="top-title">Web Design & Development</h2>
-                    <h3 class="title" style="font-size: 9vw">Christopher</h3>
-                    <h4 class="sub-title">I Create amazing things</h4>
+                    <h2 class="top-title" style="text-shadow: 2px 2px 4px #000000">Web Design & Development</h2>
+                    <h3 class="title" style="font-size: 9vw; text-shadow: 2px 2px 4px #000000;">Christopher</h3>
+                    <h4 class="sub-title" style="text-shadow: 2px 2px 4px #000000">I Create amazing things maybe</h4>
                 </div>
             </div>
         </div>
@@ -65,8 +65,9 @@
     <section id="cta-1">
         <div class="container">
             <div class="row">
-                <div class="cta-info text-center">
-                    <h3><span class="dec-tec">“</span>Everything is designed. Few things are designed well.<span class="dec-tec">”</span> -Brian Reed</h3>
+                <div class="cta-info text-center" style="box-shadow: 10px 10px 5px grey;">
+                    <!--<h3><span class="dec-tec">“</span>Everything is designed. Few things are designed well.<span class="dec-tec">”</span> -Brian Reed</h3>-->
+                    <h3><span class="dec-tec">“</span>A wannabe full-stack developer.<span class="dec-tec">”</span> -Anon8675309</h3>
                 </div>
             </div>
         </div>
@@ -90,7 +91,7 @@
                         </div>
                         <div class="icon-text">
                             <h3 class="txt-tl">Arithmetic</h3>
-                            <p class="txt-para">Get to know about five random numbers of your choice</p>
+                            <p class="txt-para">Mean, median, and mode...</p>
                         </div>
                     </div>
                     <div class="col-md-6 wow fadeInRight delay-02s" data-toggle="modal" data-target="#myModal2" id="cc2">
@@ -99,24 +100,24 @@
                         </div>
                         <div class="icon-text">
                             <h3 class="txt-tl">Factorial</h3>
-                            <p class="txt-para">n! = n * (n - 1) * (n -2) * (n -3) * ... * 3 * 2 *1</p>
+                            <p class="txt-para">n! = n * (n - 1) * (n -2) * (n -3) * ... * 3 * 2 *1 <br /><br /></p>
                         </div>
                     </div>
                     <div class="col-md-6 wow fadeInRight delay-04s" data-toggle="modal" data-target="#myModal3" id="cc3">
                         <div class="icon">
-                            <i class="fa fa-mobile"></i>
+                            <i class="fa fa-coffee"></i>
                         </div>
                         <div class="icon-text">
-                            <h3 class="txt-tl">Responsive Design</h3>
+                            <h3 class="txt-tl">FizzBuzz</h3>
                             <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
                         </div>
                     </div>
                     <div class="col-md-6 wow fadeInRight delay-04s" data-toggle="modal" data-target="#myModal4" id="cc4">
                         <div class="icon">
-                            <i class="fa fa-desktop"></i>
+                            <i class="fa fa-clone"></i>
                         </div>
                         <div class="icon-text">
-                            <h3 class="txt-tl">No Coding, No Shortcodes</h3>
+                            <h3 class="txt-tl">Palindrome</h3>
                             <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
                         </div>
                     </div>
@@ -197,7 +198,7 @@
                         </div>
                     </div>
                     <div class="modal-footer" style="padding: 0px; border-top: 0px">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="close xBtn" data-dismiss="modal">&times;</button>
                     </div>
                 </div>
             </div>
@@ -241,7 +242,7 @@
                         </div>
                     </div>
                     <div class="modal-footer" style="padding: 0px; border-top: 0px">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button" class="close xBtn" data-dismiss="modal">&times;</button>
                     </div>
                 </div>
             </div>
