--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -420,7 +420,7 @@
                         </div>
                         <div class="row" style="border-top: 1px solid #e5e5e5; padding-top: 10px">
                             <div class="col-md-4 text-center">
-                                <button id="pop" type="submit" class="btn btn-submitc">Pop!</button>
+                                <button id="pop" type="submit" class="btn btn-submitc">FizzBuzz!</button>
                             </div>
                             <div class="col-md-4 text-center">
                                 <button id="resetFB" type="submit" class="btn btn-submitc">Reset?</button>
