--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -90,12 +90,12 @@
                 <div class="col-md-9 col-sm-12">
                     <div class="col-md-4 col-sm-6 padding-right-zero">
                         <div class="portfolio-box design">
-                            <a href="https://christopherliblog.azurewebsites.net/" target="_blank"><img src="/images/port03.jpg" alt="" class="img-responsive" id="port01"></a>
+                            <a href="https://christopherliblog.azurewebsites.net/" target="_blank"><img src="/images/Blog.jpg" alt="" class="img-responsive" id="port01"></a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
                         <div class="portfolio-box design">
-                            <a href="https://christopherlibugtracker.azurewebsites.net/" target="_blank"><img src="/images/Venus Flytrap.jpg" alt="" class="img-responsive" id="port02"></a>
+                            <a href="https://christopherlibugtracker.azurewebsites.net/" target="_blank"><img src="/images/BugTracker.jpg" alt="" class="img-responsive" id="port02"></a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
@@ -572,7 +572,6 @@
                                 <button type="submit" class="btn btn-sendc" onclick="sendSMTP()">Send</button>
                             </form>
                         </div>
-
                     </div>
                     <div class="col-md-4 col-sm-6">
                         <div class="location-info">
