--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -595,7 +595,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-7 footer-copyright">
-                    <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>
+                    <a href="https://www.linkedin.com/in/christophervinceli" target="_blank"><i class="fa fa-linkedin"></i></a>
                     <a href="https://github.com/crzctrl" target="_blank"><i class="fa fa-github"></i></a>
                     <div class="credits">
                         <!--
