--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -58,7 +58,7 @@
                 <div class="wrapper wow fadeInUp delay-05s">
                     <h2 class="top-title" style="text-shadow: 2px 2px 4px #000000">Web Design & Development</h2>
                     <h3 class="title" style="font-size: 9vw; text-shadow: 2px 2px 4px #000000;">Christopher</h3>
-                    <h4 class="sub-title" style="text-shadow: 2px 2px 4px #000000">I Create amazing things </h4>
+                    <h4 class="sub-title" style="text-shadow: 2px 2px 4px #000000">Full Stack .NET Developer</h4>
                 </div>
             </div>
         </div>
@@ -90,23 +90,23 @@
                 <div class="col-md-9 col-sm-12">
                     <div class="col-md-4 col-sm-6 padding-right-zero">
                         <div class="portfolio-box design">
-                            <a href="https://christopherliblog.azurewebsites.net/" target="_blank"><img src="/images/Blog.jpg" alt="" class="img-responsive" id="port01"></a>
+                            <a href="https://christopherliblog.azurewebsites.net/" target="_blank"><img src="/images/port01.jpg" alt="" class="img-responsive" id="port01"></a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
                         <div class="portfolio-box design">
-                            <a href="https://christopherlibugtracker.azurewebsites.net/" target="_blank"><img src="/images/BugTracker.jpg" alt="" class="img-responsive" id="port02"></a>
+                            <a href="https://christopherlibugtracker.azurewebsites.net/" target="_blank"><img src="/images/port02.jpg" alt="" class="img-responsive" id="port02"></a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
                         <div class="portfolio-box design">
-                            <img src="/images/port01.jpg" alt="" class="img-responsive" id="port03">
-                        </div>
+                            <a href="https://christopherlifinancialportal.azurewebsites.net/" target="_blank"><img src="/images/port03.png" alt="" class="img-responsive" id="port03"></a>
+</div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
                         <div class="portfolio-box design">
-                            <img src="/images/port04.jpg" alt="" class="img-responsive" id="port04">
-                        </div>
+                            <a href="https://christopherliwebapi.azurewebsites.net/" target="_blank"><img src="/images/port04.jpg" alt="" class="img-responsive" id="port04"></a>
+</div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
                         <div class="portfolio-box design">
