--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -40,7 +40,7 @@
                             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
                                 <span class="fa fa-bars"></span>
                             </button>
-                            <a href="index.html" class="navbar-brand" style="font-size: 2vw; text-shadow: 2px 2px 4px #000000;">le portfolio de christopher</a>
+                            <a href="" class="navbar-brand" style="text-shadow: 2px 2px 4px #000000">le portfolio de christopher</a>
                         </div>
                         <div class="collapse navbar-collapse navbar-right" id="mynavbar">
                             <ul class="nav navbar-nav">
@@ -70,7 +70,7 @@
             <div class="row">
                 <div class="cta-info text-center" style="box-shadow: 10px 10px 5px grey;">
                     <!--<h3><span class="dec-tec">“</span>Everything is designed. Few things are designed well.<span class="dec-tec">”</span> -Brian Reed</h3>-->
-                    <h3><span class="dec-tec">“</span>The greatest mistake you can make in life is to be continually fearing you will make one<span class="dec-tec">”</span> - Elbert Hubbard</h3>
+                    <h3><span class="dec-tec">“</span>The greatest mistake you can make in life is to be continually fearing you will make one.<span class="dec-tec">”</span> - Elbert Hubbard</h3>
                 </div>
             </div>
         </div>
@@ -89,33 +89,33 @@
                 </div>
                 <div class="col-md-9 col-sm-12">
                     <div class="col-md-4 col-sm-6 padding-right-zero">
-                        <div class="portfolio-box design">
-                            <a href="https://christopherliblog.azurewebsites.net/" target="_blank"><img src="/images/port01.jpg" alt="" class="img-responsive" id="port01"></a>
+                        <div class="portfolio-box design" id="p1">
+                            <a href="https://christopherliblog.azurewebsites.net/" target="_blank"><img src="/images/port01.jpg" alt="" class="img-responsive" id="port01"><div class="bottom-right1">Blog</div></a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
-                        <div class="portfolio-box design">
-                            <a href="https://christopherlibugtracker.azurewebsites.net/" target="_blank"><img src="/images/port02.jpg" alt="" class="img-responsive" id="port02"></a>
+                        <div class="portfolio-box design" id="p2">
+                            <a href="https://christopherlibugtracker.azurewebsites.net/" target="_blank"><img src="/images/port02.jpg" alt="" class="img-responsive" id="port02"><div class="bottom-right2">Bug Tracker</div></a>
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
-                        <div class="portfolio-box design">
-                            <a href="https://christopherlifinancialportal.azurewebsites.net/" target="_blank"><img src="/images/port03.png" alt="" class="img-responsive" id="port03"></a>
-</div>
-                    </div>
-                    <div class="col-md-4 col-sm-6 padding-right-zero">
-                        <div class="portfolio-box design">
-                            <a href="https://christopherliwebapi.azurewebsites.net/" target="_blank"><img src="/images/port04.jpg" alt="" class="img-responsive" id="port04"></a>
-</div>
-                    </div>
-                    <div class="col-md-4 col-sm-6 padding-right-zero">
-                        <div class="portfolio-box design">
-                            <img src="/images/port05.jpg" alt="" class="img-responsive" id="port05">
+                        <div class="portfolio-box design" id="p3">
+                            <!--<a href="https://christopherlifinancialportal.azurewebsites.net/" target="_blank" id="ap3">--><img src="/images/port03.png" alt="" class="img-responsive" id="port03"><div class="bottom-right3">Financial Portal</div><!--</a>-->
                         </div>
                     </div>
                     <div class="col-md-4 col-sm-6 padding-right-zero">
-                        <div class="portfolio-box design">
-                            <img src="/images/port06.jpg" alt="" class="img-responsive" id="port06">
+                        <div class="portfolio-box design" id="p4">
+                            <a href="https://christopherliwebapi.azurewebsites.net/" target="_blank"><img src="/images/port04.jpg" alt="" class="img-responsive" id="port04"><div class="bottom-right4">Web API</div></a>
+                    </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 padding-right-zero">
+                        <div class="portfolio-box design" id="p5">
+                            <img src="/images/port05.jpg" alt="" class="img-responsive" id="port05"><div class="bottom-right5">Future Project</div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 padding-right-zero">
+                        <div class="portfolio-box design" id="p6">
+                            <img src="/images/port06.jpg" alt="" class="img-responsive" id="port06"><div class="bottom-right6">Future Project</div>
                         </div>
                     </div>
                 </div>
@@ -604,7 +604,7 @@
                           Licensing information: https://bootstrapmade.com/license/
                           Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Bethany
                         -->
-                        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                        Designed by <a href="https://bootstrapmade.com/">BootstrapMade.</a> Modified by <span style="color: #FFD34E">Christopher Li</span>
                     </div>
                 </div>
                 <div class="col-sm-5 footer-social">
@@ -625,6 +625,11 @@
     <script src="/scripts/SyntaxHighlighter/scripts/shBrushJScript.js"></script>
     <script src="/scripts/myCustom.js"></script>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <script>
+        $("#port01").hover(function () {
+            $("#port01").text(`The smallest of the numbers is.`);
+        });
+    </script>
 
     <script>
         SyntaxHighlighter.all();
